--- a/assets/bibliography/2018-12-22-distill.bib
+++ b/assets/bibliography/2018-12-22-distill.bib
@@ -1,7 +1,17 @@
-@article{gregor2015draw,
-  title={DRAW: A recurrent neural network for image generation},
-  author={Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo Jimenez and Wierstra, Daan},
-  journal={arXiv preprint, arXiv:1502.04623},
-  year={2015},
-  url={https://arxiv.org/pdf/1502.04623.pdf}
+@inproceedings{elmustafa2022understanding,
+  title={Understanding economic development in rural Africa using satellite imagery, building footprints and deep models},
+  author={Elmustafa, Amna and Rozi, Erik and He, Yutong and Mai, Gengchen and Ermon, Stefano and Burke, Marshall and Lobell, David},
+  booktitle={Proceedings of the 30th International Conference on Advances in Geographic Information Systems},
+  pages={1--4},
+  year={2022}
+}
+
+
+@inproceedings{abdallah2019comparative,
+  title={A comparative study on human loco-motor activity recognition using wearable sensors},
+  author={Abdallah, Amna and Abdulsadig, Rawan S and Amien, Magdi},
+  booktitle={2019 International Conference on Computer, Control, Electrical, and Electronics Engineering (ICCCEEE)},
+  pages={1--6},
+  year={2019},
+  organization={IEEE}
 }
