--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@ abbr={ACM SIGSPATIAL},
   booktitle={Proceedings of the 30th International Conference on Advances in Geographic Information Systems},
   pages={1--4},
   year={2022},
-    url={https://dl.acm.org/doi/pdf/10.1145/3557915.3561025/},
+    html={https://dl.acm.org/doi/pdf/10.1145/3557915.3561025/},
     selected={true},
 
 }
@@ -18,8 +18,7 @@ abbr={ICCCEEE},
   pages={1--6},
   year={2019},
   organization={IEEE},
-    url={https://ieeexplore.ieee.org/abstract/document/9070840/},
-    selected={true},
-
+   html={https://ieeexplore.ieee.org/abstract/document/9070840/},
+   selected={true},
 }
 
