--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,7 @@ abbr={ACM SIGSPATIAL},
   pages={1--4},
   year={2022},
     html={https://dl.acm.org/doi/pdf/10.1145/3557915.3561025/},
+    code={https://github.com/AMNAALMGLY/rural-urban-Modelbias},
     selected={true},
 
 }
