--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,18 @@
+ @Article{xu2023harvestnet,
+  title={HarvestNet: A Dataset for Detecting Smallholder Farming Activity Using Harvest Piles and Remote Sensing},
+  author={Xu^{*}, Jonathan and Elmustafa^{*}, Amna and Weldegebriel, Liya and Negash, Emnet and Lee, Richard and Meng, Chenlin and Ermon, Stefano and Lobell, David},
+  journal={arXiv preprint arXiv:2308.12061},
+  year={2023},
+}
+
+@article{teng2023bird,
+  title={Bird Distribution Modelling using Remote Sensing and Citizen Science data},
+  author={Teng, M{\'e}lisande and \textbf{Elmustafa}, \textbf{Amna} and Akera, Benjamin and Larochelle, Hugo and Rolnick, David},
+  journal={arXiv preprint arXiv:2305.01079},
+  year={2023},
+}
+
+
 @inproceedings{elmustafa2022understanding,
 abbr={ACM SIGSPATIAL},
   title={Understanding economic development in rural Africa using satellite imagery, building footprints and deep models},
