--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,9 @@
- @Article{xu2023harvestnet,
+ @article{xu2023harvestnet,
   title={HarvestNet: A Dataset for Detecting Smallholder Farming Activity Using Harvest Piles and Remote Sensing},
   author={Xu^{*}, Jonathan and Elmustafa^{*}, Amna and Weldegebriel, Liya and Negash, Emnet and Lee, Richard and Meng, Chenlin and Ermon, Stefano and Lobell, David},
   journal={arXiv preprint arXiv:2308.12061},
   year={2023},
+  selected={true},
 }
 
 @article{teng2023bird,
@@ -10,6 +11,7 @@
   author={Teng, M{\'e}lisande and \textbf{Elmustafa}, \textbf{Amna} and Akera, Benjamin and Larochelle, Hugo and Rolnick, David},
   journal={arXiv preprint arXiv:2305.01079},
   year={2023},
+  selected={true},
 }
 
 
@@ -34,7 +36,7 @@ abbr={ICCCEEE},
   year={2019},
   organization={IEEE},
     url={https://ieeexplore.ieee.org/abstract/document/9070840/},
-    selected={true},
+
 
 }
 
