--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,8 @@
   author={Xu^{*}, Jonathan and Elmustafa^{*}, Amna and Weldegebriel, Liya and Negash, Emnet and Lee, Richard and Meng, Chenlin and Ermon, Stefano and Lobell, David},
   journal={arXiv preprint arXiv:2308.12061},
   year={2023},
+   paper={harvestnet.pdf}
+
   selected={true},
 }
 
@@ -25,6 +27,8 @@ abbr={ACM SIGSPATIAL},
   pages={1--4},
   year={2022},
     url={https://dl.acm.org/doi/pdf/10.1145/3557915.3561025/},
+       paper={rural.pdf}
+
     selected={true},
 
 }
@@ -38,6 +42,7 @@ abbr={ICCCEEE},
   year={2019},
   organization={IEEE},
     url={https://ieeexplore.ieee.org/abstract/document/9070840/},
+   paper={A_comparative_study_on_human_loco-motor_activity_recognition_using_wearable_sensors.pdf}
 
 
 }
