--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
   author={Xu^{*}, Jonathan and Elmustafa^{*}, Amna and Weldegebriel, Liya and Negash, Emnet and Lee, Richard and Meng, Chenlin and Ermon, Stefano and Lobell, David},
   journal={arXiv preprint arXiv:2308.12061},
   year={2023},
-   paper={harvestnet.pdf}
+  pdf={harvestnet.pdf},
 
   selected={true},
 }
@@ -15,7 +15,9 @@ abbr={ICLR Workshop},
   author={Teng, M{\'e}lisande and \textbf{Elmustafa}, \textbf{Amna} and Akera, Benjamin and Larochelle, Hugo and Rolnick, David},
   journal={arXiv preprint arXiv:2305.01079},
   year={2023},
+  pdf={birdsat.pdf},
   selected={true},
+
 }
 
 
@@ -27,7 +29,7 @@ abbr={ACM SIGSPATIAL},
   pages={1--4},
   year={2022},
     url={https://dl.acm.org/doi/pdf/10.1145/3557915.3561025/},
-       paper={rural.pdf}
+    pdf={rural.pdf},
 
     selected={true},
 
@@ -42,7 +44,7 @@ abbr={ICCCEEE},
   year={2019},
   organization={IEEE},
     url={https://ieeexplore.ieee.org/abstract/document/9070840/},
-   paper={A_comparative_study_on_human_loco-motor_activity_recognition_using_wearable_sensors.pdf}
+   pdf={A_comparative_study_on_human_loco-motor_activity_recognition_using_wearable_sensors.pdf}
 
 
 }
