--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,14 @@
+
+@inproceedings{tengsatbird,
+ abbr={NeurIPS},
+  title={SatBird: A dataset for bird species distribution modeling using remote sensing and citizen science data},
+  author={Teng, M{\'e}lisande and \textbf{Elmustafa}, \textbf{Amna} and Akera, Benjamin and Bengio, Yoshua and Radi,Hager and  Larochelle, Hugo and Rolnick, David},
+  booktitle={Conference on Neural Information Processing Systems (NeurIPS)},
+
+  year={2023},
+  pdf={satbird.pdf},
+  selected={true},
+}
  @article{xu2023harvestnet,
  abbr={Arxiv},
   title={HarvestNet: A Dataset for Detecting Smallholder Farming Activity Using Harvest Piles and Remote Sensing},
