--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 @inproceedings{tengsatbird,
  abbr={NeurIPS},
   title={SatBird: A dataset for bird species distribution modeling using remote sensing and citizen science data},
-  author={Teng, M{\'e}lisande and \textbf{Elmustafa}, \textbf{Amna} and Akera, Benjamin and Bengio, Yoshua and Radi,Hager and  Larochelle, Hugo and Rolnick, David},
+  author={Teng, M{\'e}lisande and Elmustafa, Amna and Akera, Benjamin and Bengio, Yoshua and Radi,Hager and  Larochelle, Hugo and Rolnick, David},
   booktitle={Conference on Neural Information Processing Systems (NeurIPS)},
 
   year={2023},
@@ -23,7 +23,7 @@
 @article{teng2023bird,
 abbr={ICLR Workshop},
   title={Bird Distribution Modelling using Remote Sensing and Citizen Science data},
-  author={Teng, M{\'e}lisande and \textbf{Elmustafa}, \textbf{Amna} and Akera, Benjamin and Larochelle, Hugo and Rolnick, David},
+  author={Teng, M{\'e}lisande and Elmustafa, Amna and Akera, Benjamin and Larochelle, Hugo and Rolnick, David},
   journal={arXiv preprint arXiv:2305.01079},
   year={2023},
   pdf={birdsat.pdf},
