--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,12 +9,12 @@
   pdf={satbird.pdf},
   selected={true},
 }
- @article{xu2023harvestnet,
+ @inproceedings{xu2023harvestnet,
  abbr={AAAI24},
   title={HarvestNet: A Dataset for Detecting Smallholder Farming Activity Using Harvest Piles and Remote Sensing},
   author={Xu^{*}, Jonathan and Elmustafa^{*}, Amna and Weldegebriel, Liya and Negash, Emnet and Lee, Richard and Meng, Chenlin and Ermon, Stefano and Lobell, David},
-  journal={arXiv preprint arXiv:2308.12061},
-  year={2023},
+  booktitle={Conference on Artificial Intelligence (AAAI-24)},
+  year={2024},
   pdf={harvestnet.pdf},
 
   selected={true},
